--- a/pclviewer.ui
+++ b/pclviewer.ui
@@ -499,36 +499,15 @@ p, li { white-space: pre-wrap; }
      <property name="text">
       <string/>
      </property>
-    </widget>
-    <widget class="QLabel" name="label_11">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>30</y>
-       <width>51</width>
-       <height>51</height>
-      </rect>
+     <property name="icon">
+      <iconset resource="mecheye_qt_visualizer.qrc">
+       <normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/run.png</normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/run.png</iconset>
      </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="textFormat">
-      <enum>Qt::PlainText</enum>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="mecheye_qt_visualizer.qrc">:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/run.png</pixmap>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-     <property name="indent">
-      <number>2</number>
-     </property>
-     <property name="openExternalLinks">
-      <bool>false</bool>
+     <property name="iconSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
      </property>
     </widget>
     <widget class="QLabel" name="label_12">
@@ -546,25 +525,6 @@ p, li { white-space: pre-wrap; }
      </property>
      <property name="text">
       <string>运行</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_13">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>30</y>
-       <width>51</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="mecheye_qt_visualizer.qrc">:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/create_model.png</pixmap>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_14">
@@ -587,7 +547,7 @@ p, li { white-space: pre-wrap; }
     <widget class="QLabel" name="label_15">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>350</x>
        <y>100</y>
        <width>31</width>
        <height>17</height>
@@ -601,32 +561,10 @@ p, li { white-space: pre-wrap; }
       <string>运维</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_16">
-     <property name="geometry">
-      <rect>
-       <x>310</x>
-       <y>20</y>
-       <width>61</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="mecheye_qt_visualizer.qrc">:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/maintenance.png</pixmap>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_17">
      <property name="geometry">
       <rect>
-       <x>460</x>
+       <x>490</x>
        <y>100</y>
        <width>31</width>
        <height>17</height>
@@ -643,7 +581,7 @@ p, li { white-space: pre-wrap; }
     <widget class="QLabel" name="label_18">
      <property name="geometry">
       <rect>
-       <x>570</x>
+       <x>620</x>
        <y>100</y>
        <width>31</width>
        <height>17</height>
@@ -657,55 +595,134 @@ p, li { white-space: pre-wrap; }
       <string>调试</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_19">
+    <widget class="QPushButton" name="pushButton_random_2">
      <property name="geometry">
       <rect>
-       <x>440</x>
-       <y>30</y>
-       <width>51</width>
-       <height>51</height>
+       <x>200</x>
+       <y>20</y>
+       <width>71</width>
+       <height>71</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>UpArrowCursor</cursorShape>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+     <property name="tabletTracking">
+      <bool>false</bool>
      </property>
      <property name="text">
       <string/>
      </property>
-     <property name="pixmap">
-      <pixmap resource="mecheye_qt_visualizer.qrc">:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/document.png</pixmap>
+     <property name="icon">
+      <iconset resource="mecheye_qt_visualizer.qrc">
+       <normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/create_model.png</normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/create_model.png</iconset>
      </property>
-     <property name="scaledContents">
-      <bool>true</bool>
+     <property name="iconSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
      </property>
     </widget>
-    <widget class="QLabel" name="label_20">
+    <widget class="QPushButton" name="pushButton_random_3">
      <property name="geometry">
       <rect>
-       <x>560</x>
-       <y>30</y>
-       <width>51</width>
-       <height>51</height>
+       <x>330</x>
+       <y>20</y>
+       <width>71</width>
+       <height>71</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>UpArrowCursor</cursorShape>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+     <property name="tabletTracking">
+      <bool>false</bool>
      </property>
      <property name="text">
       <string/>
      </property>
-     <property name="pixmap">
-      <pixmap resource="mecheye_qt_visualizer.qrc">:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/debug.png</pixmap>
+     <property name="icon">
+      <iconset resource="mecheye_qt_visualizer.qrc">
+       <normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/maintenance.png</normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/maintenance.png</iconset>
      </property>
-     <property name="scaledContents">
-      <bool>true</bool>
+     <property name="iconSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
      </property>
     </widget>
-    <zorder>pushButton_random</zorder>
-    <zorder>label_12</zorder>
-    <zorder>label_11</zorder>
-    <zorder>label_13</zorder>
-    <zorder>label_14</zorder>
-    <zorder>label_15</zorder>
-    <zorder>label_16</zorder>
-    <zorder>label_17</zorder>
-    <zorder>label_18</zorder>
-    <zorder>label_19</zorder>
-    <zorder>label_20</zorder>
+    <widget class="QPushButton" name="pushButton_random_4">
+     <property name="geometry">
+      <rect>
+       <x>470</x>
+       <y>20</y>
+       <width>71</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>UpArrowCursor</cursorShape>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+     <property name="tabletTracking">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="mecheye_qt_visualizer.qrc">
+       <normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/document.png</normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/document.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_random_5">
+     <property name="geometry">
+      <rect>
+       <x>600</x>
+       <y>20</y>
+       <width>71</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>UpArrowCursor</cursorShape>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+     <property name="tabletTracking">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="mecheye_qt_visualizer.qrc">
+       <normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/debug.png</normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/debug.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_6">
     <property name="geometry">
@@ -1481,44 +1498,36 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
      <enum>QFrame::Raised</enum>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QPushButton" name="pushButton_random_6">
     <property name="geometry">
      <rect>
-      <x>1870</x>
-      <y>10</y>
-      <width>50</width>
-      <height>50</height>
+      <x>1860</x>
+      <y>0</y>
+      <width>71</width>
+      <height>71</height>
      </rect>
     </property>
-    <property name="minimumSize">
-     <size>
-      <width>50</width>
-      <height>50</height>
-     </size>
+    <property name="cursor">
+     <cursorShape>UpArrowCursor</cursorShape>
     </property>
-    <property name="maximumSize">
-     <size>
-      <width>16777215</width>
-      <height>16777215</height>
-     </size>
+    <property name="mouseTracking">
+     <bool>true</bool>
     </property>
-    <property name="sizeIncrement">
-     <size>
-      <width>1</width>
-      <height>0</height>
-     </size>
+    <property name="tabletTracking">
+     <bool>false</bool>
     </property>
     <property name="text">
      <string/>
     </property>
-    <property name="pixmap">
-     <pixmap resource="mecheye_qt_visualizer.qrc">:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/close_window.png</pixmap>
+    <property name="icon">
+     <iconset resource="mecheye_qt_visualizer.qrc">
+      <normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/close_window.png</normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/close_window.png</iconset>
     </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-    <property name="wordWrap">
-     <bool>true</bool>
+    <property name="iconSize">
+     <size>
+      <width>50</width>
+      <height>50</height>
+     </size>
     </property>
    </widget>
    <zorder>frame_2</zorder>
@@ -1534,8 +1543,8 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
    <zorder>frame_11</zorder>
    <zorder>frame_12</zorder>
    <zorder>frame_13</zorder>
-   <zorder>label_7</zorder>
    <zorder>frame_5</zorder>
+   <zorder>pushButton_random_6</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
