更新连接不成功UI显示

--- a/mecheye_qt_visualizer.qrc
+++ b/mecheye_qt_visualizer.qrc
@@ -15,6 +15,7 @@
     <file>hardware_virtualcamera.png</file>
     <file>project_stopped.png</file>
     <file>step_warning.png</file>
+    <file>icon.png</file>
 
   </qresource>
 </RCC>
