更新相机连接方式

--- a/src/pclviewer.ui
+++ b/src/pclviewer.ui
@@ -66,48 +66,6 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTextEdit" name="textEdit">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>10</y>
-      <width>311</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Ubuntu</family>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="cursor" stdset="0">
-     <cursorShape>UpArrowCursor</cursorShape>
-    </property>
-    <property name="mouseTracking">
-     <bool>true</bool>
-    </property>
-    <property name="tabletTracking">
-     <bool>false</bool>
-    </property>
-    <property name="verticalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
-    </property>
-    <property name="horizontalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
-    </property>
-    <property name="undoRedoEnabled">
-     <bool>true</bool>
-    </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:600; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:28pt; color:#ef2929;&quot;&gt;隆深智能装箱系统&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
@@ -843,12 +801,12 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_27">
+    <widget class="QLabel" name="cameraStatus">
      <property name="geometry">
       <rect>
-       <x>120</x>
+       <x>110</x>
        <y>20</y>
-       <width>111</width>
+       <width>161</width>
        <height>51</height>
       </rect>
      </property>
@@ -857,7 +815,7 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
 </string>
      </property>
      <property name="text">
-      <string>相机连接</string>
+      <string/>
      </property>
     </widget>
     <widget class="QLabel" name="label_28">
@@ -945,7 +903,7 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
       <string>硬盘</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="exitButton_2">
+    <widget class="QPushButton" name="connectCameraButton">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -1260,12 +1218,12 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_8">
+    <widget class="QLabel" name="runStatus">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>10</y>
-       <width>91</width>
+       <x>20</x>
+       <y>20</y>
+       <width>161</width>
        <height>61</height>
       </rect>
      </property>
@@ -1282,7 +1240,7 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
 </string>
      </property>
      <property name="text">
-      <string>运行状态</string>
+      <string>相机未连接</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_21">
@@ -1467,8 +1425,8 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
      <string/>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/icon.png</normaloff>:/home/grantli/qt_ws/demo/QtMecheyeCamera/mecheye_qt_visualizer/resource/images/icon.png</iconset>
+     <iconset resource="../resource/mecheye_qt_visualizer.qrc">
+      <normaloff>:/images/images/icon.png</normaloff>:/images/images/icon.png</iconset>
     </property>
     <property name="iconSize">
      <size>
@@ -1477,12 +1435,28 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
      </size>
     </property>
    </widget>
+   <widget class="QTextEdit" name="textEdit">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>10</y>
+      <width>321</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:26pt; font-weight:600; color:#ed333b;&quot;&gt; 隆深智能装箱系统&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
    <zorder>frame_2</zorder>
    <zorder>frame_7</zorder>
    <zorder>frame</zorder>
    <zorder>frame_4</zorder>
    <zorder>frame_3</zorder>
-   <zorder>textEdit</zorder>
    <zorder>frame_6</zorder>
    <zorder>frame_8</zorder>
    <zorder>frame_9</zorder>
@@ -1493,6 +1467,7 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
    <zorder>exitButton</zorder>
    <zorder>timeLabel</zorder>
    <zorder>exitButton_8</zorder>
+   <zorder>textEdit</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
