--- a/src/pclviewer.ui
+++ b/src/pclviewer.ui
@@ -815,7 +815,7 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
 </string>
      </property>
      <property name="text">
-      <string/>
+      <string>相机未连接</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_28">
@@ -835,12 +835,12 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
       <string>虚拟相机连接</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_29">
+    <widget class="QLabel" name="TCPServer">
      <property name="geometry">
       <rect>
        <x>660</x>
        <y>20</y>
-       <width>111</width>
+       <width>161</width>
        <height>51</height>
       </rect>
      </property>
@@ -849,7 +849,7 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
 </string>
      </property>
      <property name="text">
-      <string>网线连接</string>
+      <string>TCP Server等待设备接入</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_30">
@@ -1240,7 +1240,7 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
 </string>
      </property>
      <property name="text">
-      <string>相机未连接</string>
+      <string>等待运行</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_21">
