--- a/resource/mecheye_qt_visualizer.qrc
+++ b/resource/mecheye_qt_visualizer.qrc
@@ -16,6 +16,8 @@
     <file>images/project_stopped.png</file>
     <file>images/step_warning.png</file>
     <file>images/icon.png</file>
+    <file>images/group_Robot.png</file>
+    <file>images/mixed_pallet.png</file>
 
   </qresource>
 </RCC>
