增加界面切换数据保存

--- a/src/pclviewer.ui
+++ b/src/pclviewer.ui
@@ -810,6 +810,12 @@ font: 75 11pt &quot;Ubuntu Condensed&quot;;</string>
        <height>51</height>
       </rect>
      </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="styleSheet">
       <string notr="true">background-color: white;
 </string>
